Anade endpoint para recibir informacion de usuario especifico
